<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:background="#343432"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSet1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="false"
            android:layout_marginLeft="230dp"
            android:backgroundTint="#454542"
            android:text="@string/set1"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnSet3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="false"
            android:backgroundTint="#60605C"
            android:text="@string/set3"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnSet5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="false"
            android:backgroundTint="#454542"
            android:text="@string/set5"
            app:cornerRadius="1dp" />

        <TextView
            android:id="@+id/tvSetNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setNumber"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:backgroundTint="#454542"
            android:text="@string/msgEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#454542"
        android:padding="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="#454542"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAdd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#343432"
                android:text="@string/addButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSub1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#343432"
                android:text="@string/subButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/teamName1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPoints1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:fontFamily="@font/quantico"
                android:text="@string/msgZero"
                android:textAlignment="center"
                android:textColor="#FC0101"
                android:textSize="96sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/quantico"
            android:text="@string/msgX"
            android:textAlignment="center"
            android:textColor="#FC0101"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTeam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/teamName2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPoints2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:fontFamily="@font/quantico"
                android:text="@string/msgZero"
                android:textAlignment="center"
                android:textColor="#FC0101"
                android:textSize="96sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="#454542"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAdd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#343432"
                android:text="@string/addButton"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSub2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#343432"
                android:text="@string/subButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#454542"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSetCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quantico"
            android:text="@string/msgZero"
            android:textAlignment="center"
            android:textColor="#FC0101"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/msgSets"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvSetVersus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/quantico"
                android:gravity="center"
                android:text="@string/msgX"
                android:textAlignment="center"
                android:textColor="#FC0101"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSetFora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quantico"
            android:text="@string/msgZero"
            android:textAlignment="center"
            android:textColor="#FC0101"
            android:textSize="48sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>